SUBDIRS = classifier generator ipsec packet time timer l2fwd_simple switch l3fwd reflector lpm-ipfwd ipsec_offload
DIST_SUBDIRS = classifier generator ipsec packet time timer l2fwd_simple switch l3fwd reflector lpm-ipfwd ipsec_offload
if BUILD_DPAA2
SUBDIRS += kni_demo traffic_manager
DIST_SUBDIRS += kni_demo traffic_manager
if !BUILD_LS2080
SUBDIRS += cmdif_demo traffic_manager
DIST_SUBDIRS += cmdif_demo traffic_manager
endif
endif
